--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - run: npm ci
+      - run: npm install
       - run: npm run build
       - uses: appleboy/scp-action@master
         with:
