--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -43,5 +42,6 @@
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "homepage": "http://crz-gamestudio.com/"
 }
